--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "build": "npm run build:css && react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "pretty": "prettier --write .",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "proxy": "http://helperchatbot-be.herokuapp.com/"
     },
     "eslintConfig": {
         "extends": "react-app"
